<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DictContentProvider</string>
    <string name="hello_world">生词本</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="word_hint">请输入单词</string>
    <string name="detail_hint">请输入释义</string>
    <string name="search_hint">请输入要查找的单词</string>
    <string name="search">查找</string>

</resources>
