<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dict.MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:background="#cccccc" 
        android:hint="@string/word_hint"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/word"
        android:layout_marginTop="20dp"
        android:background="#cccccc" 
        android:hint="@string/detail_hint"
        android:padding="10dp"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail"
        android:layout_marginTop="20dp"
        android:text="@string/add" />

    <EditText
        android:id="@+id/search_key"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/add"
        android:layout_marginTop="40dp"
        android:background="#cccccc" 
        android:padding="10dp"
        android:hint="@string/search_hint"/>

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_key"
        android:layout_marginTop="20dp"
        android:text="@string/search" />
</RelativeLayout>